<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/welcome_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/welcome_activity_welcome_constraint_layout_background_color">

	<ImageView
		android:id="@+id/logo_image_view"
...
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/titlechinese_text_view"
		tools:layout_editor_absoluteX="98dp"
		tools:layout_editor_absoluteY="350dp"/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/view_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/welcome_activity_view_constraint_layout_height"
		android:layout_marginBottom="@dimen/welcome_activity_view_constraint_layout_margin_bottom"
		android:layout_marginEnd="@dimen/welcome_activity_view_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/welcome_activity_view_constraint_layout_margin_start"
		app:layout_constraintBottom_toTopOf="@+id/littleredgrey_studio_text_view"
...
